; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/extr_dnssec_verify.c_ldns_verify_rrsig_rsamd5.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/extr_dnssec_verify.c_ldns_verify_rrsig_rsamd5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ldns_verify_rrsig_rsamd5(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @ldns_buffer_begin(i32* %7)
  %9 = inttoptr i64 %8 to i8*
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @ldns_buffer_position(i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i64 @ldns_buffer_begin(i32* %13)
  %15 = inttoptr i64 %14 to i8*
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @ldns_buffer_position(i32* %16)
  %18 = call i32 @ldns_verify_rrsig_rsamd5_raw(i8* %9, i32 %11, i32* %12, i8* %15, i32 %17)
  ret i32 %18
}

declare dso_local i32 @ldns_verify_rrsig_rsamd5_raw(i8*, i32, i32*, i8*, i32) #1

declare dso_local i64 @ldns_buffer_begin(i32*) #1

declare dso_local i32 @ldns_buffer_position(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
